app/mint/beep/components/main/styles.module.css
.main {
  background-color: #fff;
  color: #000;
}

.container {
  max-width: 1440px;
  margin: 0 auto;
  padding: 64px var(--mantine-spacing-xl) 16px;
}

.mint-box {
  border-radius: 20px;
  background: #f5f5f5;
  padding: 96px 80px 0;

  @media (max-width: $mantine-breakpoint-sm) {
    padding: 58px 40px 0;
  }
}

.link {
  align-items: center;
  display: inline-flex;
  flex-wrap: nowrap;
  transition-duration: 200ms;
  transition-property: opacity;
  transition-timing-function: ease;
}

.link:hover {
  opacity: 0.7;
}

.back-icon {
  font-size: 12px;
  margin-right: 8px;
}

.mint-container {
  align-items: flex-start;
  border-bottom: 1px solid #000;
  display: flex;
  gap: 48px;
  height: calc(500px + 84px * 2);
  margin-top: 8px;
  padding: 64px 0;

  @media (max-width: $mantine-breakpoint-sm) {
    flex-direction: column;
    align-items: center;
    height: auto;
  }
}

.beep-image {
  aspect-ratio: 1 / 1;
  height: 500px;
  width: auto;

  @media (max-width: $mantine-breakpoint-lg) {
    height: 360px;
    width: 360px;
  }

  @media (max-width: $mantine-breakpoint-sm) {
    height: 240px;
    width: 240px;
  }
}

.mint-info-container {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  width: 50%;

  @media (max-width: $mantine-breakpoint-sm) {
    width: 100%;
  }
}

.name {
  font-size: 50px;
  font-weight: 700;
  line-height: 50px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin-top: 8px;
  margin-bottom: 16px;

  @media (max-width: $mantine-breakpoint-sm) {
    font-size: 40px;
  }
}

.mint-info-row {
  display: flex;
  flex-wrap: nowrap;
  margin-top: 92px;
  margin-bottom: 20px;

  @media (max-width: $mantine-breakpoint-sm) {
    flex-direction: column;
    margin-top: 26px;
  }
}

.mint-price-col {
  display: flex;
  flex-direction: column;
}

.lable {
  color: rgba(166, 169, 174, 1);
  font-weight: 500;
}

.time-label {
  display: flex;
  gap: 32px;
}

.mint-price-row {
  align-items: center;
  display: flex;
  gap: 12px;
  margin-top: 6px;
}

.mint-price-usd {
  font-size: 16px;
  font-weight: 500;
  color: #a6a9ae;
}

.coin-box {
  align-items: center;
  background-color: #000;
  border-radius: 50%;
  display: flex;
  flex-shrink: 0;
  height: 40px;
  justify-content: center;
  width: 40px;
}

.coin {
  color: #ccc;
  font-size: 24px;
}

.mint-price {
  font-size: 28px;
  font-weight: 500;
}

.mint-time-row {
  display: flex;
  flex-wrap: nowrap;
  gap: 4px;
}

.button {
  background-color: #060c0c !important;
  color: #fff !important;
  transition-duration: 200ms;
  transition-property: opacity;
  transition-timing-function: ease;
  width: 100% !important;
  font-size: 24px !important;
  font-weight: 500;
  border-radius: 45px !important;
  height: 56px !important;
}

.button svg {
  width: 24px !important;
  height: 24px !important;
}

.button svg circle {
  stroke: #ffffff !important;
}

.button__hide_loading_overlay {
  &[data-loading] {
    color: #000 !important;
  }
}

.button__hide_loading_overlay:before {
  display: none;
}

.button:hover {
  opacity: 0.7;
}

.button__disabled {
  background-color: #ccc;
}

.detail-container {
  display: flex;
  gap: 64px;
  padding: 40px 0 84px;

  @media (max-width: $mantine-breakpoint-sm) {
    flex-direction: column;
  }
}

.details-col {
  flex: 1;
}

.about {
  font-size: 32px;
  font-weight: 500;
  margin-bottom: 16px;

  @media (max-width: $mantine-breakpoint-sm) {
    font-size: 24px;
  }
}

.tag-row {
  display: flex;
  flex-wrap: wrap;
  gap: 4px;
  margin-bottom: 32px;
}

.tag {
  border: 1px solid #000;
  border-radius: 8px;
  padding: 2px 16px;
}

.attr-row {
  display: flex;
  gap: 32px;
}

.attr-label {
  color: rgba(166, 169, 174, 1);
  line-height: 36px;
}

.value {
  line-height: 36px;
}

.desc-col {
  flex: 1;
  margin-top: 24px;

  @media (max-width: $mantine-breakpoint-sm) {
    margin-top: 0;
  }
}

.beep {
  align-items: center;
  display: flex;
  gap: 8px;
  margin-bottom: 16px;
}

.beep-logo {
  border-radius: 50%;
  height: 24px;
  width: 24px;
}

.desc {
  color: rgba(166, 169, 174, 1);
  font-size: 14px;
  font-weight: 500;
  margin-bottom: 44px;
}

.num-row {
  margin-top: 28px;
}

.num-icon {
  margin-right: 8px;
}

.category {
  padding: 4px 16px;
  background: #060c0c;
  border-radius: 8px;
  color: #f4f0e5;
  font-size: 14px;
}

.contract-info {
  display: grid;
  gap: 16px;
}

.contract-info-item {
  gap: 48px;
}

.contract-info-label {
  color: #a6a9ae;
  font-size: 16px;
  font-weight: 500;
  min-width: 130px;
}

.contract-info-value {
  color: #000;
  font-size: 16px;
  font-weight: 500;
}

.mint-status-row {
  color: #000;
  font-size: 16px;
  margin-bottom: 8px;
}

.desc-label {
  font-size: 16px;
  font-weight: 500;
}

.deploy-modal-text {
  color: #000;
  text-align: center;
  font-size: 20px;
  font-weight: 500;
}
.discover-project {
  padding-top: 113px;
  padding-bottom: 117px;

  @media (max-width: $mantine-breakpoint-sm) {
    padding-top: 50px;
    padding-bottom: 50px;
  }
}

.discover-project-title {
  color: #000;
  font-size: 24px;
  font-weight: 500;
  margin-bottom: 40px;
}

.discover-project-card-name {
  color: #000;
  font-size: 20px;
  font-weight: 700;
  line-height: 26px;
}

.discover-project-nav-container {
  width: 218px;
  height: 296px;
  flex-shrink: 0;
  background: linear-gradient(270deg, #fff 25.38%, rgba(255, 255, 255, 0) 100%);
  position: absolute;
  right: 0;
  top: 0;
  z-index: 99;
  display: flex;
  justify-content: right;
  align-items: center;
  padding-right: 8px;
  padding-left: 8px;

  @media (max-width: $mantine-breakpoint-sm) {
    width: 109px;
  }
}

.discover-project-nav-container__prev {
  left: 0;
  right: auto;
  justify-content: left;
  background: linear-gradient(90deg, #fff 25.38%, rgba(255, 255, 255, 0) 100%);
}

.discover-project-nav-button {
  border-radius: 80px;
  background: rgba(255, 255, 255, 0.6);
  display: flex;
  width: 80px;
  height: 80px;
  justify-content: center;
  align-items: center;
  flex-shrink: 0;
  cursor: pointer;
  margin-bottom: 48px;
  @media (max-width: $mantine-breakpoint-sm) {
    width: 40px;
    height: 40px;
  }
}

.discover-project-svg-rotate {
  transform: rotate(180deg);
}

